fix cursor alignement

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,9 @@ code {
     background-color: var(--back_col);
     box-shadow: var(--bg2) 2px 2px 40px 5px;
 }
+#cursor {
+    border-left: var(--main_col) 1px solid;
+}
 
 @media (prefers-color-scheme: dark) {
     body {
